change name to D & TS Extension

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Hello Retail DTS",
+    "name": "D & TS Extension",
     "version": "1.0",
     "content_scripts": [
         {
